# energy-based-strategy-games

./: .env.example  .gitignore  CITATION.cff  README.md  pyproject.toml  requirements-lock.txt  requirements.txt
.github/workflows/: ci.yml
configs/: gridworld_ablation_gaussian.yaml  gridworld_day2.yaml  gridworld_day3.yaml  gridworld_debug.yaml  gridworld_ebm.yaml  gridworld_ppo_baseline.yaml
configs/benchmarks/: custom_gridworld.yaml  debug_suite.yaml  pettingzoo_pursuit.yaml
configs/demo/: custom_2_evader_9x9.yaml  custom_n_evader_9x9.yaml  ppo_pursuer_smoke.yaml  pursuit_policy_comparison.yaml
docs/: architecture.md  experiments.md  public_roadmap.md  pursuit_trace_viewer.md  research_notes_template.md
examples/: calibrate_device.py  compare_baselines.py  compare_pursuit_policies.py  compute_payoff_matrix.py  evaluate_strategy.py  export_pursuit_trace.py  performance_dashboard.py  pursuit_trace_viewer.py  run_ablation_suite.py  run_benchmarks.py  run_gridworld_baseline.py  run_multiseed_protocol.py  run_training_loop.py  sample_strategies.py  train_ppo_baseline.py  train_ppo_pursuer.py  visualize_rollout.py
examples/fixtures/: pursuit_trace_2_evader_9x9.json
paper/: main.tex  references.bib  results_and_limitations.tex
scripts/: check_public_leaks.py  make_paper_figures.py  reproduce_paper_results.sh  smoke_reproduce.sh
tests/: test_baselines.py  test_benchmarks.py  test_calibration.py  test_convergence.py  test_dashboard_data.py  test_device.py  test_ebm.py  test_evaluator.py  test_experiment_logging.py  test_gridworld.py  test_multi_evader_pursuit.py  test_payoff.py  test_ppo_baseline.py  test_ppo_pursuit.py  test_pursuit_observation.py  test_pursuit_policy_comparison.py  test_pursuit_runner.py  test_pursuit_trace.py  test_pursuit_trace_viewer.py  test_reproducibility_snapshot.py  test_sampler.py  test_strategy_buffer.py  test_train_loop_smoke.py  test_training_updates.py  test_visualization.py
(+59 files in other folders)
